--- a/Skills.css
+++ b/Skills.css
@@ -2,6 +2,7 @@ body{
     background-image: url(../images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 .navbar{
     background-color: #E7926B;
